# ScaseProblemSolvingSbx

./: .gitignore  CMakeLists.txt
Problems/: CMakeLists.txt
Problems/Gears/: CMakeLists.txt
Problems/Gears/include/: gears.h
Problems/Gears/src/: gears.cpp  gears.cpp.Re4016  main.cpp
Problems/Sample/: CMakeLists.txt
Problems/Sample/include/: sample.h
Problems/Sample/src/: main.cpp  sample.cpp
Problems/Subtraction/: CMakeLists.txt
Problems/Subtraction/include/: subtraction.h
Problems/Subtraction/src/: main.cpp  subtraction.cpp
Problems/TrafficLights/: CMakeLists.txt
Problems/TrafficLights/include/: TrafficLights.h
Problems/TrafficLights/src/: TrafficLights.cpp  main.cpp
Problems/Traffic_Lights/: CMakeLists.txt
Problems/Traffic_Lights/include/: traffic_lights.h
Problems/Traffic_Lights/src/: main.cpp  traffic_lights.cpp
Problems/Traffic_lights/: CMakeLists.txt
Problems/Traffic_lights/include/: traffic_lights.h
Problems/Traffic_lights/src/: Traffic_Lights.cpp  main.cpp
Problems/traffic/: CMakeLists.txt
Problems/traffic/include/: traffic.h
Problems/traffic/src/: main.cpp  traffic.cpp
Problems/traffic_lights/: CMakeLists.txt
Problems/traffic_lights/include/: traffic_lights.h
Problems/traffic_lights/src/: main.cpp  traffic_lights.cpp
Tests/: CMakeLists.txt  CTestCustom.cmake  test.cpp.in
Tests/GroundTruth/: TrafficLights.in  TrafficLights.out  gears.in  gears.out  sample.in  sample.out  subtraction.in  subtraction.out
Tests/Problems/: CMakeLists.txt  test_TrafficLights.cpp  test_Traffic_Lights.cpp  test_gears.cpp  test_sample.cpp  test_sample.cpp.p12072  test_subtraction.cpp  test_traffic.cpp  test_traffic.cpp.Ld6264  test_trafficLights.cpp  test_traffic_lights.cpp
